--- a/src/app.html
+++ b/src/app.html
@@ -27,17 +27,8 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELSHHVFHYD"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-ELSHHVFHYD');
-    </script>
+    <!-- Ghawdex Engineering Solar Analyzer Analytics -->
+    <!-- Analytics code can be added here when needed -->
   </head>
 
   <body data-sveltekit-preload-data="hover">
