--- a/src/app.html
+++ b/src/app.html
@@ -27,7 +27,10 @@
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
 
-    <!-- Ghawdex Engineering Solar Analyzer Analytics -->
+    <title>SolarScan Malta - Professional Solar Analysis & Installation Services</title>
+    <meta name="description" content="Professional solar potential analysis for Malta. Get accurate solar installation quotes, feed-in tariff calculations, and BOV financing options. Licensed solar installers in Malta.">
+    <meta name="keywords" content="solar panels malta, solar installation malta, feed-in tariff malta, solar energy malta, BOV solar financing, solar calculator malta">
+    
     <!-- Analytics code can be added here when needed -->
   </head>
 
